--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "main": "index.js",
   "keywords": [],
   "author": "",
+  "scripts": {
+      "test": "jest"
+  },
   "license": "ISC",
   "devDependencies": {
+    "@jest/types": "^29.1.2",
+    "jest": "^29.1.2",
     "n-readlines": "^1.0.1"
   }
 }
